# Spyro-dotd-Save-Editor

./: CMakeLists.txt  README.md  a.out  save_data_structure.h  savedata.h
include/: byte_utils.hpp  endianness.hpp  gui.hpp  save_data.hpp  save_data_structure.hpp  uuid.hpp
src/: gui.cpp  main.cpp  save_data.cpp  uuid.cpp
